add jib notebook